--- a/app/views/groups/challenges.html.haml
+++ b/app/views/groups/challenges.html.haml
@@ -26,4 +26,4 @@
                         %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/trash.png", alt: "Delete"}
               %tr
                 %td{ colspan: "5", style: "border-bottom: 0;" }
-                  = link_to "+ Create a new Challenge", new_path_url
+                  = link_to "+ Create a new Challenge", new_group_path_url
