--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -1,22 +1,57 @@
 body.employer { background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
 body.employer .container.body { width: inherit; background-color: transparent; padding: 0px; }
 .employer-container { width: 980px; border-radius: 0px; margin: 25px auto 0 auto; background-color: rgba(36, 72, 109, 0.8); height: 100%; padding-top:1px;}
-.employer-box{ margin:12px; background-color:white; min-height: 600px; border-radius: 0; border:1px solid rgba(0, 0, 0, .1);overflow:hidden; padding:20px 20px 5px 20px;}
-.employer-box .header { margin-bottom: 10px;}
-.employer-box .header img { height: 72px; margin-top: -15px; }
-.employer-box .header h2 { display: inline-block; font-size: 30px; }
-.employer-box .header hr { margin: 8px; }
-.employer-box .header input { float: right; border-radius: 0; margin: 10px 10px 0 0; padding: 7px 7px; font-size: 17px; }
-.employer-box table { width: 100%; }
-.employer-box table td { padding: 15px 10px; border-bottom: 1px solid #DDD; line-height: 25px;}
-.employer-box table td a { font-size: 17px; color: #333; }
-.evaluations tr:hover { background-color: #EEE; }
-.gear { opacity: 0.7; height: 30px; width: 30px; }
-.gear:hover { opacity: 1; }
-.gear img { opacity: .7;  height:20px;  width:20px; }
-.gear img:hover { opacity:1; }
-.employer-box .invite { border-radius: 0; padding: 6px 6px; font-size: 15px; margin: 4px 0 4px -8px; }
 .documentation { padding: 10px 20px; }
+
+.gear { 
+  opacity: 0.7; 
+  height: 30px; 
+  width: 30px;
+  &:hover { opacity: 1; }
+  
+  img {
+    opacity: .7;  
+    height:20px;  
+    width:20px;
+    &:hover { opacity:1; }
+  }
+}
+
+.employer-box {
+  margin:12px; 
+  background-color:white; 
+  min-height: 600px; 
+  border-radius: 0; 
+  border:1px solid rgba(0, 0, 0, .1);
+  overflow:hidden; 
+  padding:20px 20px 5px 20px;
+  
+  .header {
+    margin-bottom: 10px;
+    
+    img { height: 72px; margin-top: -15px; }
+    h2 { display: inline-block; font-size: 30px; }
+    hr { margin: 8px; }
+    input { float: right; border-radius: 0; margin: 10px 10px 0 0; padding: 7px 7px; font-size: 17px; }
+  }
+  .invite { 
+    border-radius: 0; 
+    padding: 6px 6px; 
+    font-size: 15px; 
+    margin: 4px 0 4px -8px; 
+  }
+  table {
+    width: 100%;
+    
+    td { 
+      padding: 15px 10px; 
+      border-bottom: 1px solid #DDD; 
+      line-height: 25px;
+      
+      a { font-size: 17px; color: #333; }
+    }
+  }
+}
 
 .evaluations {
   .path_pic {
@@ -34,6 +69,9 @@ body.employer .container.body { width: inherit; background-color: transparent; p
     [data-tip]:after { left: -8px; }
     
     div { font-size: 13px ;}
+    tr {
+      &:hover { background-color: #EEE; }
+    }
   }
 }
 
