style changes on custom challenge page

--- a/app/views/evaluations/_form.html.haml
+++ b/app/views/evaluations/_form.html.haml
@@ -21,7 +21,7 @@
       %h1.title= form_title      
     - if form_title == "Edit Evaluation"
       .edit_eval_notice{ style: ""}
-        Please note that you are editing a live Evaluation! If you add additional Challenges to your Evaluation, and you have candidates who have already submitted their Evaluation, they will have to return to the Evaluation URL to take the new Challenges. 
+        Please note that you are editing a live Evaluation! If you add additional Challenges to your Evaluation and you have candidates who have already submitted their Evaluation, they will have to return to the Evaluation URL to take the new Challenges. 
     
     %div{ style: "width: 86%; text-align: center; margin: 20px auto 0 auto; padding: 0 7% 0 7%;" }
       - unless @evaluation.errors.empty?
