--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -3,20 +3,6 @@ body.employer .container.body { width: inherit; background-color: transparent; p
 .employer-container { width: 980px; border-radius: 0px; margin: 25px auto 0 auto; background-color: rgba(36, 72, 109, 0.8); height: 100%; padding-top:1px;}
 .documentation { padding: 10px 20px; }
 
-.gear { 
-  opacity: 0.7; 
-  height: 30px; 
-  width: 30px;
-  &:hover { opacity: 1; }
-  
-  img {
-    opacity: .7;  
-    height:20px;  
-    width:20px;
-    &:hover { opacity:1; }
-  }
-}
-
 .employer-box {
   margin:12px; 
   background-color:white; 
@@ -48,7 +34,11 @@ body.employer .container.body { width: inherit; background-color: transparent; p
       border-bottom: 1px solid #DDD; 
       line-height: 25px;
       
-      a { font-size: 17px; color: #333; }
+      a { color: #333; }
+      .show_quoted_text {
+        font-size: 13px;
+        color: #0088cc;
+      }
     }
   }
 }
@@ -62,8 +52,7 @@ body.employer .container.body { width: inherit; background-color: transparent; p
     [data-tip]:after { left: -8px; }
   }
   .gear {
-    padding: 15px 7px; 
-    width: 20px;
+    padding: 15px 7px;
     
     [data-tip]:before { left: 5px; }
     [data-tip]:after { left: -8px; }
@@ -73,6 +62,22 @@ body.employer .container.body { width: inherit; background-color: transparent; p
       &:hover { background-color: #EEE; }
     }
   }
+}
+
+.custom_challenges {
+  .gear {
+    height: 20px;
+    width: 20px;
+    
+    [data-tip]:before { left: 5px; }
+    [data-tip]:after { left: -8px; }
+    
+    tr {
+      &:hover { background-color: #EEE; }
+    }
+    td {
+      
+    }
 }
 
 #evaluations_overview{
@@ -166,6 +171,10 @@ body.employer .container.body { width: inherit; background-color: transparent; p
           display: inline-block;
           width: auto;
           vertical-align: top;
+          
+          tr{
+            &:hover {background-color: white;}
+          }
         }
         .strengths_weaknesses {
           display: inline-block; margin-left: 20px; vertical-align: top; width: 40.5%;
@@ -250,10 +259,6 @@ body.employer .container.body { width: inherit; background-color: transparent; p
       div {
         display: inline-block;
         
-        .gear {
-          opacity: 0.7;
-          &:hover {opacity: 1;}
-        }
       }
     }
   }
