--- a/app/views/groups/challenges.html.haml
+++ b/app/views/groups/challenges.html.haml
@@ -3,27 +3,27 @@
     .header
       = image_tag STONEY_SMALL_URL, style:"", alt: "Stoney"
       %h2 Challenges
-      %input{ type: "text", placeholder: "Search Evaluations...", id: "evaluation_search" }
+      %input{ type: "text", placeholder: "Search Challenges...", id: "evaluation_search" }
     .body
-      .evaluations
+      .custom_challenges
         - if @paths.empty?
           %p 
-            You don't have any open evaluations. 
-            = link_to "Create one now.", new_group_evaluation_path(@group)
+            You don't have any custom Challenges. 
+            = link_to "Create one now.", new_group_path_url
         - else
           %table
             %tbody
               - @paths.to_a.reverse.each do |path|
                 %tr
                   %td{ style: "width: 25%; overflow: hidden;" }= link_to path.name, edit_path_url(path)
-                  %td.gear
+                  %td
                     = link_to edit_path_url(path) do
                       %div{ "data-tip" => "Edit" }
-                        %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", alt: "Edit"}
-                  %td.gear
+                        %img.gear{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", alt: "Edit"}
+                  %td
                     = link_to path_url(path), method: :delete, confirm: "Are you sure you want to delete this Challenge? This action is irreversible." do
                       %div{ "data-tip" => "Delete" }
-                        %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/trash.png", alt: "Delete"}
+                        %img.gear{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/trash.png", alt: "Delete"}
               %tr
                 %td{ colspan: "5", style: "border-bottom: 0;" }
                   = link_to "+ Create a new Challenge", new_group_path_url
