--- a/app/views/evaluations/index.html.haml
+++ b/app/views/evaluations/index.html.haml
@@ -25,13 +25,16 @@
     .header
       = image_tag STONEY_SMALL_URL, style:"", alt: "Stoney"
       %h2 Evaluations
-      %input{ type: "text", placeholder: "Search Evaluations...", id: "evaluation_search" }
+      - unless @evaluations.empty?
+        %input{ type: "text", placeholder: "Search Evaluations...", id: "evaluation_search" }
     .body
       .evaluations
         - if @evaluations.empty?
-          %p 
-            You don't have any open evaluations. 
-            = link_to "Create one now.", new_group_evaluation_path(@group)
+          .first_timer
+            = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/evaluations_dark.png"
+            %h3 Evaluations
+            %p An Evaluation is like a job application that measures a candidate's skills. A single Evaluation can contain multiple Challenges.
+            = link_to "Create an Evaluation", new_group_evaluation_path(@group), class: "submit_button"
         - else
           = render "table"
               
