--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -1,3 +1,5 @@
+@import "variables.css.scss";
+
 #content { padding-top: 75px; }
 .tab_header h1 { padding: 4px 0px 0px 0px; margin-left: 50px; }
 .tab_header img { float:left; width: 40px; height: 40px; }
