--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -1,3 +1,5 @@
+@import "variables.css.scss";
+
 #profile .span69 { margin-left:20px; width:708px; }
 #profile .span3 { margin-left:12px; }  
 #profile .leftrailicon { height:58px; width:58px; margin-right:8px; }
