--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -1,3 +1,5 @@
+@import "variables.css.scss";
+
 body.employer { background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
 body.employer .container.body { width: inherit; background-color: transparent; padding: 0px; }
 .employer-container { width: 980px; border-radius: 0px; margin: 25px auto 0 auto; background-color: rgba(36, 72, 109, 0.8); height: 100%; padding-top:1px;}
@@ -78,6 +80,7 @@ body.employer .container.body { width: inherit; background-color: transparent; p
     td {
       
     }
+  }
 }
 
 #evaluations_overview{
