--- a/app/assets/stylesheets/launchpad.css.scss
+++ b/app/assets/stylesheets/launchpad.css.scss
@@ -1,3 +1,5 @@
+@import "variables.css.scss";
+
 $divider: "https://s3.amazonaws.com/moonlite-nsdub/static/divider.png";
 $error_color: #971D1C;
 $success_color: #62c462;
