--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -17,7 +17,7 @@ body.employer .container.body { width: inherit; background-color: transparent; p
   .header {
     margin-bottom: 10px;
     
-    img { height: 72px; margin-top: -15px; }
+    .stoney { height: 72px; margin-top: -15px; }
     h2 { display: inline-block; font-size: 30px; }
     hr { margin: 8px; }
     input { float: right; border-radius: 0; margin: 10px 10px 0 0; padding: 7px 7px; font-size: 17px; }
@@ -40,6 +40,14 @@ body.employer .container.body { width: inherit; background-color: transparent; p
     p { font-size: 15px; margin: 0px 0 30px; line-height: 20px; }
     a { float: inherit; }
   }
+  .gear.small { height: 20px; width: 20px; }
+  .gear.medium { height: 25px; width: 25px; }
+  .gear.large { height: 30px; width: 30px; }
+  .gear {
+    opacity: 0.7;
+    &:hover {opacity:1;}
+  }
+  
   table {
     width: 100%;
     
@@ -53,6 +61,12 @@ body.employer .container.body { width: inherit; background-color: transparent; p
         font-size: 13px;
         color: #0088cc;
       }
+    }
+    .icon_table_cell {
+      padding: 0; 
+      width: 35px;
+      [data-tip]:before { top: 3px; left: 12px; }
+      [data-tip]:after { top: -25px; left: -3px; }
     }
   }
 }
