--- a/app/views/evaluations/_table.html.haml
+++ b/app/views/evaluations/_table.html.haml
@@ -16,14 +16,14 @@
           - else 
             users
         / %td{ style: "text-align: center; "}= e.evaluation_enrollments.count.to_s + " users"
-        %td.gear
+        %td.icon_table_cell
           = link_to edit_group_evaluation_path(@group, e) do
             %div{ "data-tip" => "Edit" }
-              %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", alt: "Edit"}
-        %td.gear
+              %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", alt: "Edit", class: "gear small"}
+        %td.icon_table_cell
           = link_to group_evaluation_path(@group, e), method: :delete, confirm: "Are you sure you want to delete this Evaluation? This action is irreversible." do
             %div{ "data-tip" => "Delete" }
-              %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/trash.png", alt: "Delete"}
+              %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/trash.png", alt: "Delete", class: "gear small"}
     - if @evaluations.empty?
       %tr
         %td{ colspan: "5", style: "border-bottom: 0; font-size; 13px;" }
