--- a/app/views/groups/account.html.haml
+++ b/app/views/groups/account.html.haml
@@ -23,7 +23,7 @@
 .employer-container
   .employer-box
     .header
-      %img{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
+      %img{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", class: "stoney", alt: "Stoney"}
       %h2 #{@group.name} Account
       %input{ type: "text", placeholder: "Search account...", id: "account_search" }
     #account_table.users
