--- a/app/views/groups/challenges.html.haml
+++ b/app/views/groups/challenges.html.haml
@@ -1,7 +1,7 @@
 .employer-container
   .employer-box
     .header
-      = image_tag STONEY_SMALL_URL, style:"", alt: "Stoney"
+      = image_tag STONEY_SMALL_URL, class: "stoney", alt: "Stoney"
       %h2 Challenges
       - unless @paths.empty?
         %input{ type: "text", placeholder: "Search Challenges...", id: "evaluation_search" }
