--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -88,9 +88,9 @@
           .controls
             %div{ "data-tip" => "Back" }
               = link_to new_group_evaluation_path(@group) do
-                = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/back.png", class: "gear"
+                = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/back.png", class: "gear medium"
             .edit_path_settings_button{ onclick: "$('#settings_modal').modal({keyboard: true, show: true})", "data-tip" => "Settings" }
-              %img.gear{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", alt: "Challenge Settings"}
+              %img.gear.medium{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", alt: "Challenge Settings"}
       - else
         %div{ style: "float: right;" }
           - if @path.published? && @path.approved?
