--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -434,13 +434,22 @@ body.employer .container.body { width: inherit; background-color: transparent; p
  }
  .image_picker {
    tr{
-     img {
-       display: inline-block;
-       height: 120px;
-       width: 120px;
-       padding: 20px;
+     td {
+       border-bottom: none;
+       img {
+         display: inline-block;
+         height: 120px;
+         width: 120px;
+         margin: 5px 20px;
+         
+         &:hover { box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.48); }
+         &:active { position: relative; top: 1px; }
+       }
      }
    }
+ }
+ .image_upload_toggle {
+   font-size: 15px;
  }
  .evaluation_info{
    border: 4px solid $employer_green;
