custom challenge images

--- a/app/views/paths/new_group.haml
+++ b/app/views/paths/new_group.haml
@@ -18,16 +18,16 @@
             %table.image_picker
               %tr
                 %td
-                  %img{ src: "http://www.placekitten.com/200/200"}
-                  %img{ src: "http://www.placekitten.com/200/200"}
-                  %img{ src: "http://www.placekitten.com/200/200"}
-                  %img{ src: "http://www.placekitten.com/200/200"}
+                  = image_tag CHALLENGE_IMAGE_STRATEGY
+                  = image_tag CHALLENGE_IMAGE_FINANCE
+                  = image_tag CHALLENGE_IMAGE_NETWORKING
+                  = image_tag CHALLENGE_IMAGE_GENERIC1
               %tr
                 %td
-                  %img{ src: "http://www.placekitten.com/200/200"}
-                  %img{ src: "http://www.placekitten.com/200/200"}
-                  %img{ src: "http://www.placekitten.com/200/200"}
-                  %img{ src: "http://www.placekitten.com/200/200"}
+                  = image_tag CHALLENGE_IMAGE_CODE
+                  = image_tag CHALLENGE_IMAGE_GENERIC2
+                  = image_tag CHALLENGE_IMAGE_SALES
+                  = image_tag CHALLENGE_IMAGE_WRITING
             %a.image_upload_toggle{onclick: "$(this).hide();$('#challenge_image_upload').show();"} 
               Or upload your own image...
             #challenge_image_upload.field.clearfix.hide
