--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,6 @@
 %html
   %head
     = render "layouts/head"
-    :javascript
-      $('#page_loading').hide();
   %body{ class: "#{'employer' if hide_background}"}
     - if current_user
       - if @path and @current_section
@@ -22,119 +20,4 @@
       = yield
     - if show_footer
       = render "layouts/footer"
-    - if show_nav_bar
-      %script{ src: "http://connect.facebook.net/en_US/all.js" }
-      :javascript
-        $(function(){
-          $(".invite_facebook_friends").click(function(){
-            FB.init({appId  : "#{ENV['FACEBOOK_KEY']}", frictionlessRequests: true});
-            FB.ui({method: 'apprequests', message: 'Invite others to MetaBright'}); 
-          });
-        })
-      #fb-root
-      
-    :javascript
-      var iph_off = #{!params[:iph].nil?};
-      var viewed_help = #{get_viewed_help.to_json};
-      var all_help = #{get_all_help.to_json};
-      var mark_read_url = '#{mark_read_url}';
-      var mark_help_read_url = '#{mark_help_read_url}';
-      var disabled_button = false;
-      
-      $("a[href='#'], a[href='']").removeAttr("href");
-      
-      $(function(){
-        $(".alert").fadeOut(10000);
-        $('#page_loading').hide();
-      })
-      
-      $("body").on("ajax:complete", ".hovercard_link", function(jqXHR, data){
-        $("#hover_card").remove();
-        $("body").append(data.responseText);
-        $("#hover_card").modal({ keyboard: true, show: true, backdrop: true});
-      });
-
-      $('.explore_link').click(function(){
-        $("#explore_modal").modal({ keyboard: true, show: true, backdrop: true});
-      });
-
-      $('.bar2').mosaic({ animation: 'slide' });
-
-      $('.notifications_link').on("ajax:success", function(xhr, data){
-        $("#notifications_modal").html(data).modal({ keyboard: true, show: true, backdrop: true});
-        $(".navitem").removeClass("highlighted");
-      });
-
-      $('.hoverscroll').hoverscroll();
-
-      $("#image_url_input").change(function(){
-        var link = $(this).val();
-        $(".image_url_preview").attr("src", link);
-        $("#image_url_preview").attr("src", link);
-      });
-
-      $(".login_link").click(function(){
-        $("#login_modal").modal({ keyboard: true, backdrop: 'static', show: true });
-      });
-
-      $(".arena_report_link").click(function(){
-        $("#report_issue_modal").modal({ keyboard: true, backdrop: 'static', show: true });
-      });
-
-      $(".modal_close").click(function(){ $(this).parents('.modal').modal('hide'); });
-
-      init_iph();
-      $(".fadein").fadeIn(1000);
-
-      $('#user_country').change(function(event){
-        $('select#user_state').attr('disabled', true);
-        var country_code = $(this).val();
-        var url = "/sections/subregion_options?parent_region="+country_code;
-        $('select#user_state').load(url).removeAttr("disabled");
-      });
-      
-      $("a[href*='/'], .loadable").click(function(){
-        disabled_button = this;
-        if($(this).hasClass("button")){
-          $(this).addClass("disabled").attr("disabled", "disabled");
-        }
-        return true;
-      });
-      
-      function startSpinner(){
-        $('#page_loading').fadeIn(500);
-      }
-      
-      function stopSpinner(){
-        $('.disabled').removeClass("disabled").removeAttr("disabled");
-        $('#page_loading').hide();
-      }
-      
-      $(function(){
-        document.addEventListener("page:fetch", startSpinner);
-        document.addEventListener("page:receive", stopSpinner);
-      });
-      
-      $("form:not(.unspinnable)").submit(function(){
-        $(this).find("input[type=submit]").addClass("disabled").attr("disabled", "disabled");
-        $('#page_loading').fadeIn(1000);
-        setTimeout("$('#page_loading').hide();", 5000);
-        $(this).on("ajax:success", function(){
-          $("#page_loading").hide();
-          $(this).find("input[type=submit]").removeClass("disabled").removeAttr("disabled");
-        });
-        return true;
-      });
-
-    - if Rails.env == "production"
-      :javascript
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-28492737-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-    = render "layouts/custom_styles"
+    = render "layouts/styles_and_scripts"
