--- a/app/views/groups/challenges.html.haml
+++ b/app/views/groups/challenges.html.haml
@@ -2,7 +2,7 @@
   .employer-box
     .header
       = image_tag STONEY_SMALL_URL, class: "stoney", alt: "Stoney"
-      %h2 Challenges
+      %h2 #{@group.name}'s Challenges
       - unless @paths.empty?
         %input{ type: "text", placeholder: "Search Challenges...", id: "evaluation_search" }
     .body
@@ -14,19 +14,43 @@
             %p Challenges contain the content that your candidates are tested on. Multiple Challenges can be included in a single Evaluation.
             = link_to "Create a custom Challenge", new_group_path_url, class: "submit_button"
         - else
-          %table
-            %tbody
-              - @paths.to_a.reverse.each do |path|
-                %tr
-                  %td{ style: "width: 25%; overflow: hidden;" }= link_to path.name, edit_path_url(path)
-                  %td
-                    = link_to edit_path_url(path) do
-                      %div{ "data-tip" => "Edit" }
-                        %img.gear{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", alt: "Edit"}
-                  %td
-                    = link_to path_url(path), method: :delete, confirm: "Are you sure you want to delete this Challenge? This action is irreversible." do
-                      %div{ "data-tip" => "Delete" }
-                        %img.gear{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/trash.png", alt: "Delete"}
-              %tr
-                %td{ colspan: "5", style: "border-bottom: 0;" }
-                  = link_to "+ Create a new Challenge", new_group_path_url
+          %ul.inlinedisplay
+            / Pretty sure this to_a isn't working
+            - @paths.to_a.each do |path|
+              = render "shared/mosaic", { pic: path.path_pic, link: edit_group_path_path(path.group_id, path.permalink), title: path.name, subtitle: "#{path.enrollments.size} users" }
+          = link_to "+ Create a new Challenge", new_group_path_url, class: "create_link"
+
+
+/ .employer-container
+/   .employer-box
+/     .header
+/       = image_tag STONEY_SMALL_URL, class: "stoney", alt: "Stoney"
+/       %h2 Challenges
+/       - unless @paths.empty?
+/         %input{ type: "text", placeholder: "Search Challenges...", id: "evaluation_search" }
+/     .body
+/       .custom_challenges
+/         - if @paths.empty?
+/           .first_timer
+/             = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/challenges_dark.png"
+/             %h3 Custom Challenges
+/             %p Challenges contain the content that your candidates are tested on. Multiple Challenges can be included in a single Evaluation.
+/             = link_to "Create a custom Challenge", new_group_path_url, class: "submit_button"
+/         - else
+/           %table
+/             %tbody
+/               - @paths.to_a.reverse.each do |path|
+/                 %tr
+/                   %td{ style: "width: 25%; overflow: hidden;" }= link_to path.name, edit_path_url(path)
+/                   %td
+/                     = link_to edit_path_url(path) do
+/                       %div{ "data-tip" => "Edit" }
+/                         %img.gear{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", alt: "Edit"}
+/                   %td
+/                     = link_to path_url(path), method: :delete, confirm: "Are you sure you want to delete this Challenge? This action is irreversible." do
+/                       %div{ "data-tip" => "Delete" }
+/                         %img.gear{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/trash.png", alt: "Delete"}
+/               %tr
+/                 %td{ colspan: "5", style: "border-bottom: 0;" }
+/                   = link_to "+ Create a new Challenge", new_group_path_url
+/ 
