--- a/app/views/pages/upheaval.html.haml
+++ b/app/views/pages/upheaval.html.haml
@@ -1,6 +1,6 @@
 :css
-  body { background-image: none; background-color: white;}
-
+  body.employer { background-image: none; background-color: white;}
+  
   .container.body { width: 100% !important; padding: 0 !important; margin-top: 40px; }
   
 :javascript
