--- a/app/views/sections/finish.html.haml
+++ b/app/views/sections/finish.html.haml
@@ -1,6 +1,6 @@
 :css
   .body.container { border: 0px; background-color: transparent; box-shadow: none; }
-  .quizcontainer { width: 650px; margin-top: 50px;}
+  .quizcontainer { width: 650px; }
   
 %div.quizcontainer.finish_page
   %div.quizspace
