--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -50,7 +50,7 @@
               %label.control-label
                 = image_tag LIGHT_BULB_URL, style: "width: 16px; height: 16px; margin-top: -11px; margin-right: -12px;"
               .controls{ style: "width: 400px;" }
-                %p All Tasks require proof of completion in the form of a webpage. If proof of completion for the task you want to create cannot be easily obtained from a website url, consider rephrasing or changing it.
+                %p All Tasks require proof of completion in the form of a webpage. If proof of completion for the Task you want to create cannot be easily obtained from a website url, consider rephrasing or changing it.
                 
         - if task.creative? or new_task
           .creative.template_toggle{ style: (new_task ? "display: none;" : "") }
