--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -92,14 +92,27 @@ body.employer .container.body { width: inherit; background-color: transparent; p
     }
   }
   .eval_url {
-    text-align: center;
-    cursor: text;
-    -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25);
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25);
-    border: 1px inset;
-    background-color: white;
-    padding: 2px 8px;
-    width: 92.5%;
+    width: 36%; 
+    overflow: hidden;
+    
+    input {
+      display: inline-block;
+      text-align: center;
+      font-size: 12px;
+      cursor: text;
+      -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25);
+      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25);
+      border: 1px inset;
+      background-color: white;
+      padding: 2px 8px;
+      width: 66.5%;
+    }
+    div {
+      display: inline-block; 
+      width: 10%; 
+      position: relative; 
+      top: 3px;
+    }
   }
 }
 
