--- a/app/views/evaluations/_table.html.haml
+++ b/app/views/evaluations/_table.html.haml
@@ -3,13 +3,15 @@
     - @evaluations.to_a.reverse.each do |e|
       %tr
         %td{ style: "width: 25%; overflow: hidden;" }= link_to e.title, group_evaluation_path(@group, e)
-        %td{ style: "width: 25%;" }
+        %td{ style: "width: 22%;" }
           - e.paths.each do |path|
             .path_pic
               %div{ "data-tip" => path.name }
                 %img{ src: path.picture, style: "width: 25px; height: 25px;", title: path.name, alt: path.name }
-        %td{ style: "width: 32%; overflow: hidden" }
-          %input.eval_url{ value: take_group_evaluation_url(e.permalink), readonly:""}
+        %td.eval_url
+          %input{ value: take_group_evaluation_url(e.permalink), readonly:""}
+          %div
+            = clippy("#{take_group_evaluation_url(e.permalink)}").html_safe
         %td{ style: "text-align: center; "}
           = e.evaluation_enrollments.where("submitted_at IS NOT NULL").count.to_s
           - if e.evaluation_enrollments.where("submitted_at IS NOT NULL").count == 1 
