--- a/app/views/pages/tos.html.haml
+++ b/app/views/pages/tos.html.haml
@@ -1,5 +1,5 @@
-.aboutcontainer
-  .aboutbox
+.employer-container{ style: "width: 750px; margin: 85px auto 40px;"}
+  .employer-box{ style: "min-height: 0;"}
     .aboutheader
       %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
         %span Terms of Service
