--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1002,7 +1002,7 @@ h1, h2, h3, h4, h5, h6, p, div, a { font-family: 'MuliLight', 'Helvetica', 'Aria
   
   .aboutcontainer { width: 980px; }
   .aboutheader {
-   padding: 15px 0 0 15px;
+   padding: 6px 0 0 15px;
    
    img { height: 140px; }
    h1 { font-size: 58px; display: inline-block; margin-top: 46px; vertical-align: top;} 
@@ -1124,6 +1124,15 @@ h1, h2, h3, h4, h5, h6, p, div, a { font-family: 'MuliLight', 'Helvetica', 'Aria
         color: white;
         margin-bottom: 17px;
       }
+      .coupon_desc {
+        font-size: 16px;
+        background: $employer_orange;
+        display: inline-block;
+        padding: 8px 12px;
+        border-radius: 8px;
+        color: white;
+        margin-bottom: 17px;
+      }
       .gear {
         height: 30px;
         width: 30px;
@@ -1163,7 +1172,7 @@ h1, h2, h3, h4, h5, h6, p, div, a { font-family: 'MuliLight', 'Helvetica', 'Aria
       }
       input {
         width: 300px;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
       }
       span {
         font-size: 20px;
